syntax = "proto3";

message UserRequest {
    string name = 1;
    int32 age = 2;
    string email = 3;
    bool active = 4;
    repeated string tags = 5;
}

message UserResponse {
    string id = 1;
    string status = 2;
    string message = 3;
    UserRequest user = 4;
    int64 timestamp = 5;
}

message ProductRequest {
    string product_name = 1;
    double price = 2;
    int32 quantity = 3;
    string category = 4;
}

message ProductResponse {
    string product_id = 1;
    string status = 2;
    ProductRequest product = 3;
    double total_value = 4;
}